--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Calorie Tracker</title>
 </head>
 <body>
+  <!-- Navbar -->
   <nav>
     <div class="nav-wrapper blue">
       <div class="container">
@@ -22,6 +23,7 @@
   <br>
 
   <div class="container">
+    <!-- Form Card -->
     <div class="card">
       <div class="card-content">
         <span class="card-title">Add Meal / Food Item</span>
@@ -36,15 +38,40 @@
               <label for="item-calories">Calories</label>
             </div>
             <button class="add-btn btn blue darken-3"> <i class="fa fa-plus"></i> Add Meal</button>
+            <!-- <button class="add-btn btn orange"> <i class="fa fa-plus"></i> Update Meal</button>
+            <button class="add-btn btn red"> <i class="fa fa-plus"></i> Delete Meal</button> -->
+            <button class="add-btn btn grey pull-right"> <i class="fa fa-chevron-circle-left"></i> Back</button>
           </div>
         </form>
       </div>
     </div>
+    <!-- Calorie count -->
+<h3 class="center-align">Total Calories: <span class="total-calories">0</span></h3>
+
+  <!-- Item List -->
+  <ul id="item-list" class="collection">
+
+    <!-- <li class="collection-item" id='item-0'>
+      <strong>Steak dinner: </strong> <em>1200 Calories</em>
+      <a href="" class="secondary-content"><i class="edit-item fa fa-pencil"></i></a>
+    </li>
+    <li class="collection-item" id='item-0'>
+      <strong>Cookie: </strong> <em>200 Calories</em>
+      <a href="" class="secondary-content"><i class="edit-item fa fa-pencil"></i></a>
+    </li>
+    <li class="collection-item" id='item-0'>
+      <strong>Eegs: </strong> <em>50 Calories</em>
+      <a href="" class="secondary-content"><i class="edit-item fa fa-pencil"></i></a>
+    </li> -->
+  </ul>
+
   </div>
   <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+  <script src="app.js"></script>
 </body>
 </html>
