--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav>
       <div class="nav-wrapper blue">
         <div class="container">
-          <a href="#" class="brand-logo center">Track Calorie</a>
+          <a href="#" class="brand-logo center">Calorie Tracker</a>
           <ul class="right">
             <li>
               <a href="" class="clear-btn btn blue lighten-3">Clear All</a>
